--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "pug": "^2.0.3"
   }
 }
