--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.16.1",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "node-sass-middleware": "0.11.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "redis": "^2.8.0"
   }
 }
