--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build:dev": "webpack"
   },
   "dependencies": {
     "connect-redis": "^3.4.1",
@@ -17,5 +18,12 @@
     "node-sass-middleware": "0.11.0",
     "pug": "^2.0.3",
     "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
