--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:dev": "webpack"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
