--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build:dev": "webpack"
+    "build:dev": "webpack --env.NODE_ENV=development"
   },
   "dependencies": {
     "axios": "^0.19.0",
