--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "build": "webpack --env.NODE_ENV=production",
     "build:dev": "webpack --env.NODE_ENV=development"
   },
   "dependencies": {
