--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "node-sass-middleware": "0.11.0",
+    "promise-polyfill": "8.1.3",
     "pug": "^2.0.3",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "css-loader": "^3.2.0",
