--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:dev": "webpack --env.NODE_ENV=development"
   },
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.8",
     "axios": "^0.19.0",
     "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
