--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "webpack --env.NODE_ENV=production",
-    "build:dev": "webpack --env.NODE_ENV=development"
+    "build": "babel src/dashboard/components/src --out-dir src/dashboard/components --presets react-app/prod && webpack --env.NODE_ENV=production",
+    "build:dev": "babel src/dashboard/components/src --out-dir src/dashboard/components --presets react-app/prod && webpack --env.NODE_ENV=development"
   },
   "dependencies": {
     "@shopify/draggable": "^1.0.0-beta.8",
     "axios": "^0.19.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -26,9 +28,10 @@
   },
   "devDependencies": {
     "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.20.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
