--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build:dev": "babel src/dashboard/components/src --out-dir src/dashboard/components --presets react-app/prod && webpack --env.NODE_ENV=development"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
     "@shopify/draggable": "^1.0.0-beta.8",
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
@@ -23,6 +25,8 @@
     "node-sass-middleware": "0.11.0",
     "promise-polyfill": "8.1.3",
     "pug": "^2.0.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "redis": "^2.8.0",
     "whatwg-fetch": "^3.0.0"
   },
