--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.16.0",
     "node-sass-middleware": "0.11.0",
     "promise-polyfill": "8.1.3",
+    "prop-types": "^15.7.2",
     "pug": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -31,6 +32,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
