--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "classnames": "^2.2.6",
     "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -33,14 +34,16 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.4.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.20.0",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10"
   }
 }
