--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "morgan": "~1.9.0",
@@ -47,9 +49,11 @@
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.20.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "2.1.2",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
